# pedalboard-bridge

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  audio-patches.json  audio.go  audio_test.go  flash.go  go.mod  go.sum  jack_midi.go  main.go  midi.go  midi_test.go  mode.go  modhost.go  modhost_test.go  opendeck-bridge.service  websocket.go
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/src/: audio.rs  flash.rs  jack_midi.rs  lib.rs  main.rs  mode.rs  modhost.rs  websocket.rs
src/: audio.rs  deploy.rs  flash.rs  jack_midi.rs  lib.rs  main.rs  mode.rs  modhost.rs  websocket.rs
stub/: Cargo.toml
stub/src/: main.rs
tests/: modhost_integration.rs
