[package]
name = "pedalboard-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pedalboard-config = { git = "https://github.com/pedalboard/pedalboard-config" }
midi-controller = { git = "https://github.com/pedalboard/midi-controller" }
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
jack = "0.13"
socket2 = "0.5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
